# metal-integration

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: lib.rs
src/tests/: mod.rs  tensor.rs
tests/: compile_check.rs
